<resources>
    <string name="app_name">SenFacture</string>
    <string name="welcome">Bienvenue, </string>
    <string name="connection">Connectez-vous</string>
    <string name="login">Email</string>
    <string name="password">Mot de passe</string>
    <string name="connect">Connexion</string>
    <string name="sign_up">Inscription</string>
    <string name="sign_up2">S\'inscrire</string>
    <string name="not_signed_up">Vous n\'avez pas de compte ?</string>
    <string name="email">senfacture@overload.sn</string>
    <string name="paid_bills">Factures payées</string>
    <string name="unpaid_bills">Factures impayées</string>
    <string name="manage_bills">Gérer les factures</string>
    <string name="structures">Structures des facturiers</string>
    <string name="help">Aide</string>
    <string name="inscription">Inscription</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="degrees">Diplomes</string>
    <string name="o_level">Bac</string>
    <string name="bachelor">Licence</string>
    <string name="master">Master</string>
    <string name="save">Enregistrer</string>
    <string name="cancel">Annuler</string>
    <string name="error_field">Veuillez remplir les champs</string>
    <string name="error_mail">Email incorrect</string>
    <string name="error_connection">Veuillez vérifier votre connexion</string>
    <string name="error_parameters">Paramètres incorrectes</string>
    <string name="error_inscription">Inscription échouée</string>
    <string name="success_inscription">Inscription réussie</string>
    <string name="add_bills">Ajouter une facture</string>
    <string name="intitule">Intitulé</string>
    <string name="price">Montant</string>
    <string name="number">Numéro</string>
    <string name="deadline">Date d\'écheance</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="senfacture">SenFacture est un système de gestion de factures. Il vous permettra d\'enregistrer, de modifier et de consulter les dites factures, qu\'elles soient impayées ou non. Si vous avez besoin d\'aide, utilisez la rubrique \"Aide\" de la barre de navigation.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_university_fragment">UniversityFragment</string>
    <string name="successfully_signed_up">Inscription réussie ! Redirection en cours</string>
    <string name="successfully_added_bill">Facture ajoutée ! Redirection en cours</string>
    <string name="no_bill_found">Aucune facture trouvée</string>
    <string name="please_add">Veuillez ajouter une facture</string>
    <string name="edit_bills">Modifier une facture</string>
    <string name="help_text">Bienvenue dans la rubrique d\'aide. L\'application est en cours de développement donc certains bugs peuvent apparaître. Pour ajouter une facture, rendez vous dans la page \"Gérer les factures\" où vous pourrez ajouter, modifier ou supprimer les factures. Ces derniers seront consultables dans les pages "\Factures payées"\ et "\Factures impayées"\ selon leur état de paiement</string>

</resources>