<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_manage"
            android:title="@string/manage_bills" />

        <item
            android:id="@+id/nav_unpaid"
            android:icon="@drawable/ic_money_off"
            android:title="@string/unpaid_bills" />

        <item
            android:id="@+id/nav_paid"
            android:icon="@drawable/ic_money"
            android:title="@string/paid_bills" />

        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_map"
            android:title="@string/structures" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />
    </group>
</menu>