<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.senfacture.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

   <fragment
          android:id="@+id/nav_manage"
          android:name="com.example.senfacture.GestionFragment"
          android:label="@string/manage_bills"
          tools:layout="@layout/fragment_gestion" />

      <fragment
          android:id="@+id/nav_paid"
          android:name="com.example.senfacture.PayeesFragment"
          android:label="@string/paid_bills"
          tools:layout="@layout/fragment_payees" />

      <fragment
          android:id="@+id/nav_unpaid"
          android:name="com.example.senfacture.ImpayeesFragment"
          android:label="@string/unpaid_bills"
          tools:layout="@layout/fragment_impayees" />


    <fragment
        android:id="@+id/nav_services"
        android:name="com.example.senfacture.StructureFragment"
        android:label="@string/structures"
        tools:layout="@layout/fragment_structures" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.senfacture.HelpFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_help" />

    !-->
</navigation>