<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/all"
    tools:context=".AjoutFactureFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_bills"
        android:textColor="@color/gray"
        android:textSize="@dimen/title"
        android:textStyle="bold|italic" />

    <ImageView
        android:layout_width="381dp"
        android:layout_height="118dp"
        app:srcCompat="@mipmap/ic_logo3">

    </ImageView>

    <EditText
        android:id="@+id/txtIntitulé"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top"
        android:hint="@string/intitule" />

    <EditText
        android:id="@+id/txtMontant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top"
        android:hint="@string/price" />

    <EditText
        android:id="@+id/txtNuméro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top"
        android:hint="Numéro" />

    <EditText
        android:id="@+id/txtDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/deadline"
        android:inputType="date"
        tools:layout_marginTop="@dimen/top" />

    <!-- <RadioButton
        android:id="@+id/txtEntreprise"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:text="senelec" />

    <RadioButton
        android:id="@+id/txtEntreprise"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:text="orange" />

    <RadioButton
        android:id="@+id/txtEntreprise"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:text="seneau" />

    <RadioButton
        android:id="@+id/txtEntreprise"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:text="canal +" />!-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/cancel"
            />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/save"
            android:textColor="@android:color/white"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>